* 4.2.0
- Added Histogram.PowersOfTenDividedBuckets()
* 4.1.1
- Bugfix: HTTP request metrics in 4.1.0 got broken due to typo in middleware helper.
* 4.1.0
- Fixed HttpClient metrics duration that was incorrectly measured. #265
- prometheus-net.NetFramework.AspNet is now strong named, just like all the other assemblies. #273
- NetFx target is now conditional for Windows builds only, to allow easier development work on nonwindows platforms. #264
- MetricPusher now supports a callback for logging push errors. #186
- Added support for defining static labels on registry or metric level. #256
- Added ICollectorRegistry and IMetricFactory for mocking in test code. #268
- Ignore /metrics URL by default in HTTP request metrics.
- Fix overflow in Summary after observing more than uint.MaxValue events. #277
- Reduce allocations in hot paths. #276, #275
- Added request filtering (authorization) support to standalone MetricServer. #261
* 4.0.0
- Allow arbitrary ASP.NET Core route parameters to be exposed as HTTP metric labels. #225
- Breaking change: some HTTP metrics implementation classes were changed from public to internal. They were never supposed to be public and hopefully nobody ever used them directly. Public documented API did not change.
- Add HttpClient metrics with IHttpClientFactory integration.
* 3.6.0
- Added ASP.NET Core health check publisher for publishing metrics on health check status. #203 #209
- Fixed hang in ASP.NET Web API exporter. #215
- Fixed ASP.NET Web API exporter exporting metrics from the wrong registry. #217
- Reduced memory use in MetricPusher implementation. Inspired by #208
- Added basic gRPC service metrics support. #212
- Reduce pointless log spam on cancelled scrapes - will silently ignore cancelled scrapes in the ASP.NET Core exporter. #220
* 3.5.0
- Exposed metric.Unpublish() method since there was already a matching Publish() there.
- When the scrape is aborted, stop collecting/serializing metrics. #189